--- a/src/pages/Brand.css
+++ b/src/pages/Brand.css
@@ -1,5 +1,3 @@
 .cards-container {
-    display: flex;
-    gap: .5rem;
-    flex-wrap: wrap;
+    @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 p-6;
 }
